syntax = "proto3";
package grpc_server;

option go_package = "grpc-go/pb";

service UserService {
    rpc GetUserData(ID) returns(User);
    rpc GetAllUser(Empty) returns(Users);
}

message ID {
    uint64 id = 1;
}

message Empty {}

message Users {
    repeated User users = 1;
}

message User {
    uint64 id = 1;
    string name = 2;
    string email = 3;
}